src/test/ui/async-await/issues/issue-95307.stderr
error[E0706]: functions in traits cannot be declared `async`
  --> $DIR/issue-95307.rs:7:5
   |
LL |     async fn new() -> [u8; _];
   |     -----^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     `async` because of this
   |
   = note: `async` trait functions are not currently supported
   = note: consider using the `async-trait` crate: https://crates.io/crates/async-trait
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
   = help: add `#![feature(return_position_impl_trait_in_trait)]` to the crate attributes to enable

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/issue-95307.rs:7:28
   |
LL |     async fn new() -> [u8; _];
   |                            ^ `_` not allowed here

error[E0658]: using `_` for array lengths is unstable
  --> $DIR/issue-95307.rs:7:28
   |
LL |     async fn new() -> [u8; _];
   |                            ^
   |
   = note: see issue #85077 <https://github.com/rust-lang/rust/issues/85077> for more information
   = help: add `#![feature(generic_arg_infer)]` to the crate attributes to enable

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0658, E0706.
For more information about an error, try `rustc --explain E0658`.
